EEVEE - Specular Light Viewport Render Pass Behavior (AO and Screenspace Reflection - Over-Darkening Effect on Metallic Object) #87440

Closed
opened 2021-04-12 19:59:37 +02:00 by Macc · 11 comments

System Information
Operating system: Windows-10
Graphics card: GeForce GTX 960M

Blender Version
Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-04-10 16:36, hash: ed5507de8a
Worked: (newest version of Blender that worked as expected)

Short description of error
With Metallic objects, New Screenspace reflections and AO implementation (or another cause or bug is maybe the reason) creates over-darkening and unexpected results (when there is a metallic object) that can also be seen on Specular Light Pass from viewport passes as well as just by looking at a metallic object in combined pass

2.93 Combined Viewport Render Pass - Metallic object - DARK Ambient Occlusion on Specular Surfaces.png 2.92 Combined Viewport Render Pass - Metallic object.png
2.93 Specular Light Pass - AO enabled.png 2.92 Specular Light Pass - AO enabled.png
2.93 Specular Light Pass - AO and SSR enabled.png 2.92 Specular Light Pass - AO and SSR enabled.png

Exact steps for others to reproduce the error

  • Open attached file or:
  • Create a plane without adding or changing its material and scale by 5 and move -1 (down)
  • Edit the material of default cube and set metallic value to 1
  • Ensure viewport shading settings do not use scene world but use the forest HDRI and maximize world opacity and remove blur
  • Then in Render Pass set the Specular Light pass for example
  • Go to properties and first activate ambient occlusion - (it will make it everything over-dark)
  • then second activate screenspace reflections and - (it will make everything dark on specular light pass)
  • Also Go to combined pass of viewport- the metal cube will have strange dark shadows and darker reflections due when u use AO+SSR
    !! Compare this with 2.92.0 and there specular light pass is working properly and metal cube doesnt have strange over-dark look etc. when AO and SSR is active
    eevee_ssr_bug.blend
**System Information** Operating system: Windows-10 Graphics card: GeForce GTX 960M **Blender Version** Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-04-10 16:36, hash: `ed5507de8a` Worked: (newest version of Blender that worked as expected) **Short description of error** With Metallic objects, New Screenspace reflections and AO implementation (or another cause or bug is maybe the reason) creates over-darkening and unexpected results (when there is a metallic object) that can also be seen on Specular Light Pass from viewport passes as well as just by looking at a metallic object in combined pass |![2.93 Combined Viewport Render Pass - Metallic object - DARK Ambient Occlusion on Specular Surfaces.png](https://archive.blender.org/developer/F9930929/2.93_Combined_Viewport_Render_Pass_-_Metallic_object_-_DARK_Ambient_Occlusion_on_Specular_Surfaces.png)|![2.92 Combined Viewport Render Pass - Metallic object.png](https://archive.blender.org/developer/F9930928/2.92_Combined_Viewport_Render_Pass_-_Metallic_object.png) | -- | -- | |![2.93 Specular Light Pass - AO enabled.png](https://archive.blender.org/developer/F9930904/2.93_Specular_Light_Pass_-_AO_enabled.png)|![2.92 Specular Light Pass - AO enabled.png](https://archive.blender.org/developer/F9930903/2.92_Specular_Light_Pass_-_AO_enabled.png) |![2.93 Specular Light Pass - AO and SSR enabled.png](https://archive.blender.org/developer/F9930911/2.93_Specular_Light_Pass_-_AO_and_SSR_enabled.png)|![2.92 Specular Light Pass - AO and SSR enabled.png](https://archive.blender.org/developer/F9930910/2.92_Specular_Light_Pass_-_AO_and_SSR_enabled.png) **Exact steps for others to reproduce the error** - Open attached file or: - Create a plane without adding or changing its material and scale by 5 and move -1 (down) - Edit the material of default cube and set metallic value to 1 - Ensure viewport shading settings do not use scene world but use the forest HDRI and maximize world opacity and remove blur - Then in Render Pass set the Specular Light pass for example - Go to properties and first activate ambient occlusion - (it will make it everything over-dark) - then second activate screenspace reflections and - (it will make everything dark on specular light pass) - Also Go to combined pass of viewport- the metal cube will have strange dark shadows and darker reflections due when u use AO+SSR !! Compare this with 2.92.0 and there specular light pass is working properly and metal cube doesnt have strange over-dark look etc. when AO and SSR is active [eevee_ssr_bug.blend](https://archive.blender.org/developer/F9935142/eevee_ssr_bug.blend)
Author

Added subscriber: @MCAN

Added subscriber: @MCAN

#86036 was marked as duplicate of this issue

#86036 was marked as duplicate of this issue
Macc changed title from EEVEE - Specular Pass (AO and Screenspace Reflection - Darkening Effect on Metallic Object) to EEVEE - Specular Light Viewport Pass (AO and Screenspace Reflection - Darkening Effect on Metallic Object) 2021-04-12 20:04:30 +02:00
Macc changed title from EEVEE - Specular Light Viewport Pass (AO and Screenspace Reflection - Darkening Effect on Metallic Object) to EEVEE - Specular Light Viewport Render Pass (AO and Screenspace Reflection - Darkening Effect on Metallic Object) 2021-04-12 20:04:49 +02:00
Macc changed title from EEVEE - Specular Light Viewport Render Pass (AO and Screenspace Reflection - Darkening Effect on Metallic Object) to EEVEE - Specular Light Viewport Render Pass Behavior (AO and Screenspace Reflection - Over-Darkening Effect on Metallic Object) 2021-04-12 20:27:53 +02:00

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Thanks for the report, I can confirm.

Thanks for the report, I can confirm.
Author

You are welcome.

You are welcome.

Added subscriber: @geocentric_wage

Added subscriber: @geocentric_wage
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker

This issue was referenced by 3735986e87

This issue was referenced by 3735986e875981e5525ec8cec379023abcc692bf

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2021-04-20 17:45:47 +02:00

Added subscriber: @EAW

Added subscriber: @EAW
Sign in to join this conversation.
6 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#87440
No description provided.