Fix T87440 EEVEE: Specular Light Viewport Render Pass wrong behavior

This was caused by the closure refactor. The radiance being masked
for SSR, we need to not enable SSR when trying to render the specular
color pass.

Reviewed By: jbakker

Differential Revision: https://developer.blender.org/D11028